# AnnaAutoparts

./: .gitignore  CMakeLists.txt  Dockerfile
.devcontainer/: Dockerfile
Document/1_submission/: cover_letter.docx  partitioned.aux  partitioned.tex
Document/2_revision/: auto_parts.tex  bayes.bib
Document/3_second_revision/: auto_parts.tex  bayes.bib
Document/4_arxiv_submission/: auto_parts.bbl  auto_parts.tex
Document/old versions/: partitioned_old.tex
Figures/: figure_3.ai
Software/application_note/: AP_announcement.tex
Software/manual/: ap_manual.tex
partitiondistance/: MbRandom.cpp  MbRandom.h  MbVector.h  YPL077C.nex  bad.part  good.part  hungarian.cpp  main.cpp  partition.cpp  partition.h  partitiondistance.1  temp.in
partitiondistance/partitiondistance.xcodeproj/: brianmoore.mode1v3  brianmoore.pbxuser  (+3 more)
src/: Alignment.cpp  Alignment.hpp  Branch.cpp  Branch.hpp  BranchFactory.cpp  BranchFactory.hpp  Chunk.cpp  Chunk.hpp  ConditionalLikelihoods.cpp  ConditionalLikelihoods.hpp  EigenSystem.cpp  EigenSystem.hpp  Hungarian.cpp  Hungarian.hpp  Mcmc.cpp  Mcmc.hpp  Model.cpp  Model.hpp  Msg.cpp  Msg.hpp  Node.cpp  Node.hpp  NodePair.cpp  NodePair.hpp  Parameter.cpp  Parameter.hpp  ParameterBaseFrequencies.cpp  ParameterBaseFrequencies.hpp  ParameterExchangabilityRates.cpp  ParameterExchangabilityRates.hpp  ParameterGammaShape.cpp  ParameterGammaShape.hpp  ParameterSummary.cpp  ParameterSummary.hpp  ParameterSummaryPartition.cpp  ParameterSummaryPartition.hpp  ParameterSummaryReal.cpp  ParameterSummaryReal.hpp  ParameterTree.cpp  ParameterTree.hpp  (+29 more)
(+3450 files in other folders)
